--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-typescript": "^0.8.1",
     "typescript": "^2.6.1"
+  },
+  "dependencies": {
+    "regl": "^1.3.0"
   }
 }
