--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "rollup -c --watch",
-    "build": "rollup -c"
+    "serve": "./serveit -i node_modules 'node_modules/.bin/rollup -c rollup.config.dev.js'",
+    "release": "rollup -c rollup.config.release.js"
   },
   "author": "",
   "license": "MIT",
@@ -16,15 +16,14 @@
     "preact": "^8.2.6",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "regl": "^1.3.0",
     "rollup": "^0.51.5",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-typescript": "^0.8.1",
+    "rollup-plugin-uglify-es": "0.0.1",
     "typescript": "^2.6.1"
-  },
-  "dependencies": {
-    "regl": "^1.3.0"
   }
 }
