--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "parcel -o dev.html -d dist/dev",
+    "serve": "parcel -o dev.html",
     "release": "tsc --noEmit && parcel build speedscope.tsx"
   },
   "author": "",
