--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "parcel dev.html --open --no-autoinstall",
-    "release": "tsc --noEmit && parcel build speedscope.tsx"
+    "release": "./release.sh"
   },
   "browserslist": [
     "last 2 Chrome versions",
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "aphrodite": "2.1.0",
+    "gh-pages": "1.1.0",
     "parcel-bundler": "1.7.0",
     "preact": "8.2.7",
     "regl": "1.3.1",
