--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "parcel -o dev.html",
-    "release": "tsc --noEmit && parcel build speedscope.tsx"
+    "serve": "parcel dev.html --open --no-autoinstall",
+    "release": "./release.sh"
   },
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "aphrodite": "^1.2.5",
-    "parcel-bundler": "^1.2.1",
-    "preact": "^8.2.7",
-    "regl": "^1.3.0",
-    "tsify": "^3.0.4",
-    "typescript": "^2.6.1",
-    "uglify-es": "^3.2.2"
+    "aphrodite": "2.1.0",
+    "parcel-bundler": "1.7.0",
+    "preact": "8.2.7",
+    "regl": "1.3.1",
+    "typescript": "2.8.1",
+    "uglify-es": "3.2.2"
   }
 }
