--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "parcel index.html --open --no-autoinstall",
-    "deploy": "./deploy.sh"
+    "deploy": "./deploy.sh",
+    "prettier": "prettier --write './**/*.ts' './**/*.tsx'",
+    "lint": "eslint './**/*.ts' './**/*.tsx'",
+    "test": "npm run lint",
+    "serve": "parcel index.html --open --no-autoinstall"
   },
   "browserslist": [
     "last 2 Chrome versions",
@@ -15,10 +18,14 @@
   "license": "MIT",
   "devDependencies": {
     "aphrodite": "2.1.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "parcel-bundler": "1.7.0",
     "preact": "8.2.7",
+    "prettier": "^1.12.0",
     "regl": "1.3.1",
     "typescript": "2.8.1",
+    "typescript-eslint-parser": "^14.0.0",
     "uglify-es": "3.2.2"
   }
 }
