--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "regl": "1.3.1",
     "typescript": "2.8.1",
     "typescript-eslint-parser": "^14.0.0",
-    "uglify-es": "3.2.2"
+    "uglify-es": "3.2.2",
+    "@types/pako": "1.0.0",
+    "pako": "1.0.6"
   }
 }
