--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "test": "tsc --noEmit && npm run lint && npm run coverage",
     "serve": "parcel index.html --open --no-autoinstall"
   },
-  "browserslist": ["last 2 Chrome versions", "last 2 Firefox versions"],
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^22.2.3",
+    "@types/node": "^10.1.4",
     "@types/pako": "1.0.0",
     "aphrodite": "2.1.0",
     "coveralls": "^3.0.1",
@@ -39,7 +43,16 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "\\.test\\.tsx?$",
-    "collectCoverageFrom": ["*.{ts,tsx}", "!*.d.{ts,tsx}"],
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"]
+    "collectCoverageFrom": [
+      "*.{ts,tsx}",
+      "!*.d.{ts,tsx}"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ]
   }
 }
