--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "bin": {"speedscope": "./cli.js"},
+  "bin": {
+    "speedscope": "./cli.js"
+  },
   "scripts": {
     "deploy": "./deploy.sh",
     "prettier": "prettier --write './**/*.ts' './**/*.tsx'",
@@ -13,7 +15,10 @@
     "test": "tsc --noEmit && npm run lint && npm run coverage",
     "serve": "parcel index.html --open --no-autoinstall"
   },
-  "browserslist": ["last 2 Chrome versions", "last 2 Firefox versions"],
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -29,7 +34,7 @@
     "jsverify": "^0.8.3",
     "jszip": "^3.1.5",
     "pako": "1.0.6",
-    "parcel-bundler": "1.7.0",
+    "parcel-bundler": "1.9.2",
     "preact": "8.2.7",
     "prettier": "^1.12.0",
     "regl": "1.3.1",
@@ -43,7 +48,16 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "\\.test\\.tsx?$",
-    "collectCoverageFrom": ["**/*.{ts,tsx}", "!**/*.d.{ts,tsx}"],
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"]
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx}",
+      "!**/*.d.{ts,tsx}"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ]
   }
 }
