Update tsconfig to re-enable code splitting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "esnext",
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
     "strict": true,
     "jsx": "react",
     "noUnusedLocals": true,
