Specify file format for speedscope (#83)
This defines a JSON-based file format for speedscope.

The motivation for is primarily two things:
1. To enable others to write tools to output profiles which can be read by speedscope
2. To enable others to write tools to handle the output of speedscope, leveraging the variety of importers that speedscope supports

Fixes #65

--- a/package.json
+++ b/package.json
@@ -22,25 +22,26 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "@types/jszip": "^3.1.4",
-    "@types/node": "^10.1.4",
+    "@types/jest": "22.2.3",
+    "@types/jszip": "3.1.4",
+    "@types/node": "10.1.4",
     "@types/pako": "1.0.0",
     "aphrodite": "2.1.0",
-    "coveralls": "^3.0.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "jest": "^23.0.1",
-    "jsverify": "^0.8.3",
-    "jszip": "^3.1.5",
+    "coveralls": "3.0.1",
+    "eslint": "4.19.1",
+    "eslint-plugin-prettier": "2.6.0",
+    "jest": "23.0.1",
+    "jsverify": "0.8.3",
+    "jszip": "3.1.5",
     "pako": "1.0.6",
     "parcel-bundler": "1.9.2",
     "preact": "8.2.7",
-    "prettier": "^1.12.0",
+    "prettier": "1.12.0",
+    "quicktype": "15.0.45",
     "regl": "1.3.1",
-    "ts-jest": "^22.4.6",
+    "ts-jest": "22.4.6",
     "typescript": "2.8.1",
-    "typescript-eslint-parser": "^14.0.0",
+    "typescript-eslint-parser": "14.0.0",
     "uglify-es": "3.2.2"
   },
   "jest": {
