Unzip files before running tests

--- a/package.json
+++ b/package.json
@@ -11,20 +11,13 @@
     "prepack": "./build-release.sh",
     "prettier": "prettier --write './**/*.ts' './**/*.tsx'",
     "lint": "eslint './**/*.ts' './**/*.tsx'",
-    "jest": "jest",
+    "jest": "./test-setup.sh && jest",
     "coverage": "npm run jest -- --coverage && coveralls < coverage/lcov.info",
     "test": "tsc --noEmit && npm run lint && npm run coverage",
     "serve": "parcel index.html --open --no-autoinstall"
   },
-  "files": [
-    "cli.js",
-    "dist/release/**",
-    "!*.map"
-  ],
-  "browserslist": [
-    "last 2 Chrome versions",
-    "last 2 Firefox versions"
-  ],
+  "files": ["cli.js", "dist/release/**", "!*.map"],
+  "browserslist": ["last 2 Chrome versions", "last 2 Firefox versions"],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -55,17 +48,8 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "\\.test\\.tsx?$",
-    "collectCoverageFrom": [
-      "**/*.{ts,tsx}",
-      "!**/*.d.{ts,tsx}"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json"
-    ]
+    "collectCoverageFrom": ["**/*.{ts,tsx}", "!**/*.d.{ts,tsx}"],
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"]
   },
   "dependencies": {
     "opn": "5.3.0"
