--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "test": "tsc --noEmit && npm run lint && npm run coverage",
     "serve": "parcel index.html --open --no-autoinstall"
   },
-  "files": ["cli.js", "dist/release/**", "!*.map"],
-  "browserslist": ["last 2 Chrome versions", "last 2 Firefox versions"],
+  "files": [
+    "cli.js",
+    "dist/release/**",
+    "!*.map"
+  ],
+  "browserslist": [
+    "last 2 Chrome versions",
+    "last 2 Firefox versions"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -35,8 +42,10 @@
     "pako": "1.0.6",
     "parcel-bundler": "1.9.2",
     "preact": "8.2.7",
+    "preact-redux": "jlfwong/preact-redux#a56dcc4",
     "prettier": "1.12.0",
     "quicktype": "15.0.45",
+    "redux": "^4.0.0",
     "regl": "1.3.1",
     "ts-jest": "22.4.6",
     "typescript": "2.8.1",
@@ -48,8 +57,17 @@
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "\\.test\\.tsx?$",
-    "collectCoverageFrom": ["**/*.{ts,tsx}", "!**/*.d.{ts,tsx}"],
-    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json"]
+    "collectCoverageFrom": [
+      "**/*.{ts,tsx}",
+      "!**/*.d.{ts,tsx}"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json"
+    ]
   },
   "dependencies": {
     "opn": "5.3.0"
