--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "speedscope",
   "version": "0.4.0",
   "description": "",
+  "repository": "jlfwong/speedscope",
   "main": "index.js",
   "bin": {
     "speedscope": "./bin/cli.js"
@@ -41,7 +42,7 @@
     "redux": "^4.0.0",
     "regl": "1.3.1",
     "ts-jest": "22.4.6",
-    "typescript": "2.8.1",
+    "typescript": "3.0.1",
     "typescript-eslint-parser": "14.0.0",
     "uglify-es": "3.2.2"
   },
