Add example output of perf record + perf script

--- a/sample/programs/cpp/Makefile
+++ b/sample/programs/cpp/Makefile
@@ -1,9 +1,19 @@
-.PHONY: all
+.PHONY: all clean linux-perf
 
-all: simple random
+all: simple simple-terminates random
+
+clean:
+	rm -f simple simple-terminates random
 
 simple: simple.cpp
-	g++ -Wall -g -o $@ $<
+	$(CXX) -Wall -g -o $@ $<
+
+simple-terminates: simple-terminates.cpp
+	$(CXX) -Wall -g -o $@ $<
 
 random: random.cpp
-	g++ -Wall -g -o $@ $<
+	$(CXX) -Wall -g -o $@ $<
+
+linux-perf:
+	docker build -t speedscope-ubuntu .
+	docker run --privileged speedscope-ubuntu > ../../profiles/linux-perf/simple.txt
