Add sample output with system wide profiling

--- a/sample/programs/cpp/Makefile
+++ b/sample/programs/cpp/Makefile
@@ -16,6 +16,7 @@ random: random.cpp
 
 linux-perf:
 	docker build -t speedscope-ubuntu .
-	docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh with-header > ../../profiles/linux-perf/simple-with-header.txt
-	docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh with-pid > ../../profiles/linux-perf/simple-with-pid.txt
-	docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh > ../../profiles/linux-perf/simple.txt
+	docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh system-wide > ../../profiles/linux-perf/system-wide.txt
+	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh with-header > ../../profiles/linux-perf/simple-with-header.txt
+	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh with-pid > ../../profiles/linux-perf/simple-with-pid.txt
+	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh > ../../profiles/linux-perf/simple.txt
