Add multiprocess example

--- a/sample/programs/cpp/Makefile
+++ b/sample/programs/cpp/Makefile
@@ -1,9 +1,9 @@
 .PHONY: all clean linux-perf
 
-all: simple simple-terminates random
+all: simple simple-terminates random forks
 
 clean:
-	rm -f simple simple-terminates random
+	rm -f simple simple-terminates random forks
 
 simple: simple.cpp
 	$(CXX) -Wall -g -o $@ $<
@@ -11,12 +11,15 @@ simple: simple.cpp
 simple-terminates: simple-terminates.cpp
 	$(CXX) -Wall -g -o $@ $<
 
+forks: forks.cpp
+	$(CXX) -Wall -g -o $@ $<
+
 random: random.cpp
 	$(CXX) -Wall -g -o $@ $<
 
 linux-perf:
 	docker build -t speedscope-ubuntu .
-	docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh system-wide > ../../profiles/linux-perf/system-wide.txt
+	docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh forks > ../../profiles/linux-perf/forks.txt
 	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh with-header > ../../profiles/linux-perf/simple-with-header.txt
 	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh with-pid > ../../profiles/linux-perf/simple-with-pid.txt
 	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh > ../../profiles/linux-perf/simple.txt
