--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepack": "./scripts/build-release.sh",
     "prettier": "prettier --write 'src/**/*.ts' 'src/**/*.tsx'",
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
-    "jest": "./scripts/test-setup.sh && jest",
+    "jest": "./scripts/test-setup.sh && jest --runInBand",
     "coverage": "npm run jest -- --coverage && coveralls < coverage/lcov.info",
     "test": "tsc --noEmit && npm run lint && npm run coverage",
     "serve": "parcel assets/index.html --open --no-autoinstall"
