Add support for importing linux "perf script" output (#135)
Fixes #119

--- a/sample/programs/cpp/Makefile
+++ b/sample/programs/cpp/Makefile
@@ -1,9 +1,25 @@
-.PHONY: all
+.PHONY: all clean linux-perf
 
-all: simple random
+all: simple simple-terminates random forks
+
+clean:
+	rm -f simple simple-terminates random forks
 
 simple: simple.cpp
-	g++ -Wall -g -o $@ $<
+	$(CXX) -Wall -g -o $@ $<
+
+simple-terminates: simple-terminates.cpp
+	$(CXX) -Wall -g -o $@ $<
+
+forks: forks.cpp
+	$(CXX) -Wall -g -o $@ $<
 
 random: random.cpp
-	g++ -Wall -g -o $@ $<
+	$(CXX) -Wall -g -o $@ $<
+
+linux-perf:
+	docker build -t speedscope-ubuntu .
+	docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh forks > ../../profiles/linux-perf/forks.linux-perf.txt
+	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh with-header > ../../profiles/linux-perf/simple-with-header.linux-perf.txt
+	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh with-pid > ../../profiles/linux-perf/simple-with-pid.linux-perf.txt
+	# docker run --privileged speedscope-ubuntu /bin/bash perf-script.sh > ../../profiles/linux-perf/simple.linux-perf.txt
