--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "preact": "8.2.7",
     "preact-redux": "jlfwong/preact-redux#a56dcc4",
     "prettier": "1.12.0",
+    "protobufjs": "6.8.8",
     "quicktype": "15.0.45",
     "redux": "^4.0.0",
     "ts-jest": "22.4.6",
