--- a/sample/programs/go/Makefile
+++ b/sample/programs/go/Makefile
@@ -1,12 +1,15 @@
 .PHONY: all clean linux-perf
 
-all: simple
+all: simple server
 
 clean:
-	rm -f simple
+	rm -f simple server
 
 simple: simple.go
-	go build simple.go
+	go build $<
+
+server: server.go
+	go build $<
 
 simple.prof: simple
 	./$< -cpuprofile=$@
