--- a/package.json
+++ b/package.json
@@ -29,29 +29,29 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "22.2.3",
-    "@types/jszip": "3.1.4",
-    "@types/node": "10.1.4",
-    "@types/pako": "1.0.0",
-    "aphrodite": "2.1.0",
-    "coveralls": "3.0.1",
-    "eslint": "4.19.1",
-    "eslint-plugin-prettier": "2.6.0",
-    "jest": "24.3.0",
-    "jsverify": "0.8.3",
-    "jszip": "3.1.5",
-    "pako": "1.0.6",
-    "parcel-bundler": "1.9.2",
-    "preact": "8.2.7",
+    "@types/jest": "^22.2.3",
+    "@types/jszip": "^3.1.4",
+    "@types/node": "^10.1.4",
+    "@types/pako": "^1.0.0",
+    "aphrodite": "^2.1.0",
+    "coveralls": "^3.0.1",
+    "eslint": "^4.19.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "jest": "^24.3.0",
+    "jsverify": "^0.8.3",
+    "jszip": "^3.1.5",
+    "pako": "^1.0.6",
+    "parcel-bundler": "^1.9.2",
+    "preact": "^8.2.7",
     "preact-redux": "jlfwong/preact-redux#a56dcc4",
-    "prettier": "1.12.0",
-    "protobufjs": "6.8.8",
-    "quicktype": "15.0.209",
+    "prettier": "^1.12.0",
+    "protobufjs": "^6.8.8",
+    "quicktype": "^15.0.209",
     "redux": "^4.0.0",
-    "ts-jest": "24.3.0",
-    "typescript": "3.2.4",
-    "typescript-eslint-parser": "17.0.1",
-    "uglify-es": "3.2.2"
+    "ts-jest": "^24.3.0",
+    "typescript": "~3.2.4",
+    "typescript-eslint-parser": "^17.0.1",
+    "uglify-es": "^3.2.2"
   },
   "jest": {
     "transform": {
