Add a hack to force a stable sort node <= v10

--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
+    "setupFilesAfterEnv": [
+      "./src/jest-setup.js"
+    ],
     "testRegex": "\\.test\\.tsx?$",
     "collectCoverageFrom": [
       "**/*.{ts,tsx}",
