--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "parcel-bundler": "1.9.2",
     "preact": "8.2.7",
     "preact-redux": "jlfwong/preact-redux#a56dcc4",
-    "prettier": "1.12.0",
+    "prettier": "2.0.4",
     "protobufjs": "6.8.8",
     "quicktype": "15.0.209",
     "redux": "^4.0.0",
@@ -57,6 +57,9 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
+    "setupFilesAfterEnv": [
+      "./src/jest-setup.js"
+    ],
     "testRegex": "\\.test\\.tsx?$",
     "collectCoverageFrom": [
       "**/*.{ts,tsx}",
