Add linting for hooks, upgrade eslint

--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "@types/jszip": "3.1.4",
     "@types/node": "14.0.1",
     "@types/pako": "1.0.0",
+    "@typescript-eslint/eslint-plugin": "2.33.0",
+    "@typescript-eslint/parser": "2.33.0",
     "aphrodite": "2.1.0",
     "coveralls": "3.0.1",
-    "eslint": "4.19.1",
+    "eslint": "7.0.0",
     "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react-hooks": "4.0.2",
     "jest": "24.3.0",
     "jsverify": "0.8.3",
     "jszip": "3.1.5",
