--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "@types/pako": "1.0.0",
     "@typescript-eslint/eslint-plugin": "2.33.0",
     "@typescript-eslint/parser": "2.33.0",
+    "acorn": "7.2.0",
     "aphrodite": "2.1.0",
     "coveralls": "3.0.1",
-    "eslint": "7.0.0",
+    "eslint": "6.0.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react-hooks": "4.0.2",
     "jest": "24.3.0",
