Fix schema generation in new TypeScript version (#274)
Fixes #268 

I fixed it by dropping the dependency on quicktype entirely, and using its dependency directly. I still don't understand why the version of typescript used in this repository affects what quicktype is doing, but it seems like the issue is in quicktype, not its dependency.

I validated this change was correct by diffing the output of `node scripts/generate-file-format-schema-json.js` with what's currently on http://speedscope.app/file-format-schema.json. There's no difference.

This PR also includes changes to the CI script to ensure that we can catch this before hitting master next time.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
     "jest": "./scripts/test-setup.sh && jest --runInBand",
     "coverage": "npm run jest -- --coverage && coveralls < coverage/lcov.info",
-    "test": "tsc --noEmit && npm run lint && npm run coverage",
+    "typecheck": "tsc --noEmit",
+    "test": "./scripts/ci.sh",
     "serve": "parcel assets/index.html --open --no-autoinstall"
   },
   "files": [
@@ -46,7 +47,7 @@
     "preact-redux": "jlfwong/preact-redux#a56dcc4",
     "prettier": "2.0.4",
     "protobufjs": "6.8.8",
-    "quicktype": "15.0.209",
+    "typescript-json-schema": "0.42.0",
     "redux": "4.0.0",
     "ts-jest": "24.3.0",
     "typescript": "3.9.2",
