--- a/package.json
+++ b/package.json
@@ -34,24 +34,28 @@
     "@types/jszip": "3.1.4",
     "@types/node": "14.0.1",
     "@types/pako": "1.0.0",
+    "@typescript-eslint/eslint-plugin": "2.33.0",
+    "@typescript-eslint/parser": "2.33.0",
+    "acorn": "7.2.0",
     "aphrodite": "2.1.0",
     "coveralls": "3.0.1",
-    "eslint": "4.19.1",
+    "eslint": "6.0.0",
     "eslint-plugin-prettier": "2.6.0",
+    "eslint-plugin-react-hooks": "4.0.2",
     "jest": "24.3.0",
     "jsverify": "0.8.3",
     "jszip": "3.1.5",
     "pako": "1.0.6",
     "parcel-bundler": "1.12.4",
-    "preact": "8.2.7",
-    "preact-redux": "jlfwong/preact-redux#a56dcc4",
+    "preact": "10.4.1",
     "prettier": "2.0.4",
     "protobufjs": "6.8.8",
-    "typescript-json-schema": "0.42.0",
-    "redux": "4.0.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "ts-jest": "24.3.0",
     "typescript": "3.9.2",
     "typescript-eslint-parser": "17.0.1",
+    "typescript-json-schema": "0.42.0",
     "uglify-es": "3.2.2"
   },
   "jest": {
@@ -75,6 +79,7 @@
     ]
   },
   "dependencies": {
-    "opn": "5.3.0"
+    "opn": "5.3.0",
+    "react": "^16.13.1"
   }
 }
