Try converting from preact to react

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "strict": true,
     "jsx": "react",
     "noUnusedLocals": true,
-    "jsxFactory": "h",
-    "target": "es2015"
+    "target": "es2015",
+    "baseUrl": "."
   }
 }
