--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/jszip": "3.1.4",
     "@types/node": "14.0.1",
     "@types/pako": "1.0.0",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "2.33.0",
     "@typescript-eslint/parser": "2.33.0",
     "acorn": "7.2.0",
@@ -47,9 +49,10 @@
     "jszip": "3.1.5",
     "pako": "1.0.6",
     "parcel-bundler": "1.12.4",
-    "preact": "10.4.1",
     "prettier": "2.0.4",
     "protobufjs": "6.8.8",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "ts-jest": "24.3.0",
@@ -79,7 +82,6 @@
     ]
   },
   "dependencies": {
-    "opn": "5.3.0",
-    "react": "^16.13.1"
+    "opn": "5.3.0"
   }
 }
