--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "recoil": "0.0.7",
     "redux": "^4.0.5",
     "ts-jest": "24.3.0",
     "typescript": "3.9.2",
