--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "prettier --write 'src/**/*.ts' 'src/**/*.tsx'",
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
     "jest": "./scripts/test-setup.sh && jest --runInBand",
-    "coverage": "npm run jest -- --coverage && coveralls < coverage/lcov.info",
+    "coverage": "npm run jest -- --coverage",
     "typecheck": "tsc --noEmit",
     "test": "./scripts/ci.sh",
     "serve": "parcel assets/index.html --open --no-autoinstall"
@@ -38,7 +38,6 @@
     "@typescript-eslint/parser": "2.33.0",
     "acorn": "7.2.0",
     "aphrodite": "2.1.0",
-    "coveralls": "3.0.1",
     "eslint": "6.0.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react-hooks": "4.0.2",
