--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "preact": "10.4.1",
     "prettier": "2.0.4",
     "protobufjs": "6.8.8",
-    "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "ts-jest": "24.3.0",
     "typescript": "3.9.2",
@@ -79,7 +78,6 @@
     ]
   },
   "dependencies": {
-    "open": "7.2.0",
-    "react": "^16.13.1"
+    "open": "7.2.0"
   }
 }
