Migrate to fast-check

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepack": "./scripts/build-release.sh",
     "prettier": "prettier --write 'src/**/*.ts' 'src/**/*.tsx'",
     "lint": "eslint 'src/**/*.ts' 'src/**/*.tsx'",
-    "jest": "./scripts/test-setup.sh && jest --runInBand",
+    "jest": "jest --runInBand",
     "coverage": "npm run jest -- --coverage",
     "typecheck": "tsc --noEmit",
     "test": "./scripts/ci.sh",
@@ -41,8 +41,8 @@
     "eslint": "6.0.0",
     "eslint-plugin-prettier": "2.6.0",
     "eslint-plugin-react-hooks": "4.0.2",
+    "fast-check": "2.16.0",
     "jest": "24.3.0",
-    "jsverify": "0.8.3",
     "jszip": "3.1.5",
     "pako": "1.0.6",
     "parcel-bundler": "1.12.4",
