--- a/sample/programs/cpp/Dockerfile
+++ b/sample/programs/cpp/Dockerfile
@@ -1,12 +1,11 @@
 FROM ubuntu:bionic
 
 RUN apt-get update
-RUN apt-get install -y build-essential
-RUN apt-get install -y linux-tools-common linux-tools-generic
+RUN apt-get install -y build-essential linux-tools-common linux-tools-4.15.0-30-generic libpthread-stubs0-dev
 RUN ln -sf /usr/lib/linux-tools/4.15.0-30-generic/perf /usr/bin/perf
 
 WORKDIR /workdir
 
 ADD . /workdir
 
-RUN make clean simple-terminates forks
+RUN make clean simple simple-terminates forks idle
