--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "typescript": "4.2.3",
     "typescript-json-schema": "0.42.0",
     "uglify-es": "3.2.2",
-    "uint8array-json-parser": "jlfwong/uint8array-json-parser#edce51ce"
+    "uint8array-json-parser": "0.0.2"
   },
   "jest": {
     "transform": {
