--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "jsverify": "0.8.3",
     "jszip": "3.1.5",
     "pako": "1.0.6",
-    "parcel-bundler": "1.12.4",
+    "parcel": "2.13.3",
     "preact": "10.4.1",
     "prettier": "3.1.1",
+    "process": "^0.11.10",
     "protobufjs": "6.8.8",
     "source-map": "0.6.1",
     "ts-jest": "24.3.0",
