--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "jsverify": "0.8.3",
     "jszip": "3.1.5",
     "pako": "1.0.6",
-    "parcel": "2.13.3",
+    "parcel-bundler": "1.12.4",
     "preact": "10.4.1",
     "prettier": "3.1.1",
     "protobufjs": "6.8.8",
