--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react",
     "noUnusedLocals": true,
     "jsxFactory": "h",
-    "target": "es2015"
+    "target": "es2015",
+    "skipLibCheck": true
   }
 }
