--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "eslint": "8.0.0",
     "eslint-plugin-prettier": "5.1.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "24.3.0",
+    "jest": "30.2.0",
+    "jest-environment-jsdom": "29.7.0",
     "jfrview": "0.2.0",
     "jsverify": "0.8.3",
     "jszip": "3.1.5",
@@ -52,7 +53,7 @@
     "prettier": "3.1.1",
     "protobufjs": "6.8.8",
     "source-map": "0.6.1",
-    "ts-jest": "24.3.0",
+    "ts-jest": "29.4.6",
     "tsx": "4.19.2",
     "typescript": "5.9.3",
     "typescript-json-schema": "0.67.0",
@@ -60,6 +61,7 @@
     "uint8array-json-parser": "0.0.2"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "transform": {
       "^.+\\.tsx?$": "ts-jest",
       "^.+\\.js$": "esbuild-jest"
